# VehicleComputingSimulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  json_to_read.json
include/: and_operator.h  basic_condition.h  condition.h  condition_factory.h  enums.h  full_condition.h  global_properties.h  input.h  node.h  operator_node.h  or_operator.h  root.h  sensor.h  speed_sensor.h  test_helper.h  tire_pressure_sensor.h
src/: and_operator.cpp  basic_condition.cpp  condition_factory.cpp  enums.cpp  full_condition.cpp  global_properties.cpp  input.cpp  main.cpp  operator_node.cpp  or_operator.cpp  root.cpp  sensor.cpp  speed_sensor.cpp  test_helper.cpp  tire_pressure_sensor.cpp
test/: test_build.cpp  test_complex_build.cpp  test_helper.cpp  test_simple_build.cpp
